# 100-days-of-rust

./: LICENSE  README.md
Misc-Projects/guessing_game/src/: main.rs
Week-01/Day-02_Finding-Nemo/nemo/: Cargo.toml
Week-01/Day-03_Barbecue-Skewers/skewers/: Cargo.toml
Week-01/Day-04_Is-Johnny-Making-Progress/progress/: Cargo.toml
Week-01/Day-06_Next-Prime/next_prime/: Cargo.toml
Week-01/Day-07_Merge-Sorted-Array/merge-sorted-arrays/: Cargo.toml
Week-02/Day-09_Trapping-Rain-Water/trapping_water/: Cargo.toml
Week-02/Day-11_Restore-IP-Addresses/ip_string/: Cargo.toml
Week-02/Day-12_Mountains_And_Valleys/mouvals/: Cargo.toml
Week-02/Day-14_Karacas-Encryption-Algorithm/karaca/: Cargo.toml
Week-03/Day-16_Nim-Game/nim/: Cargo.toml
Week-03/Day-17_Prison-Break/prison_break/: Cargo.toml
Week-03/Day-19_URL-Shortener/short/: Cargo.toml  index.html
Week-03/Day-20_API-Challenge/cities/: Cargo.toml  cities.db  index.html
Week-03/Day-21_Random-Maze-Generator/maze/: Cargo.toml
Week-04/Day-23_The-Dining_Philosophers/dinner/: Cargo.toml
Week-04/Day-24_The-Josephus-Problem/josephus/: Cargo.toml
Week-04/Day-26_Briefcase-Lock/lock/: Cargo.toml
Week-04/Day-28_Word-Search/words/: Cargo.toml
Week-05/Day-29_Traffic-Light-Checker/lights/: Cargo.toml
Week-05/Day-30_The-Maximum-Value/maximum/: Cargo.toml
Week-05/Day-32_Climbing-The-Leaderboard/leaderboard/: Cargo.toml
Week-05/Day-33_WERTYU/wertyu/: Cargo.toml
Week-08/day-52/: README.md
Week-11/Day-74_CATTLEMETER/meter/: Cargo.toml
Week-11/Day-74_CATTLEMETER/meter/src/: main.rs
(+160 files in other folders)
