[package]
name = "meter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twitter-v2 = "0.1.8"
axum = "0.6.20"
serde = {version = "1.0.183", features = ["derive"]}
serde_json = "1.0"
tower-http = "0.4.3"
tracing-subscriber = "0.3.17"
tokio =  { version = "1.31.0", features = ["macros", "rt-multi-thread"] }
chrono = "0.4.26"
